0.2 Release


	Renamed project to Abella


    Tactics changes:

      * The case tactic now removes the hypothesis which is being analyzed

      * The abort tactic ends the current proof


    New examples:

      * poplmark-1a - reflexivity and transitivity for Fsub,
                      i.e. POPLmark Challenge 1a

      * poplmark-2a - progress and preservation for Fsub,
                      i.e. POPLmark Challenge 2a

      * pcf - subject reduction for PCF

      * seq - comparison of internal and external definitions of lambda Prolog,
              i.e. {L |- P} versus an explicit and user-defined seq atom


0.1 Release
