@@ -178,6 +178,10 @@ The following tactics are listed in order of usefulness (according to me)
   Given a goal of the form "F1 /\ F2" the split tactic creates the two
   subgoals "F1" and "F2". The second subgoal has "F1" as a hypothesis.
 
+  clear <HYP-NAME> ... <HYP-NAME>.
+  ================================
+  Removes the given hypotheses
+
 Inductive Restrictions
 ======================
 Inductive restrictions are represented by * (smaller) and @
