@@ -61,6 +61,7 @@ rule token = parse
 | "undo"             { UNDO }
 | "assert"           { ASSERT }
 | "keep"             { KEEP }
+| "clear"            { CLEAR }
 
 | number as n        { NUM (int_of_string n) }
 | name as n          { ID n }
